--- a/docker-compose-registry.yml
+++ b/docker-compose-registry.yml
@@ -8,6 +8,7 @@ services:
          - registry:/var/lib/registry
       ports:
          - "55000:5000"
+      restart: unless-stopped   
 
 volumes:
    registry:
